MD-2008-10-17-2: Bugfix:     o removed copy paste error 
MD-2008-10-17-1: Bugfix:     o changed unclear message

MD-2008-10-17-0: Bugfix:     o change some logging messages in IZ2753
                 Enhancem.:  o IZ 77, RFE for introducing a filesystem config
                 Review:     CR

TB-2008-10-17-1: Enhancem.:  o Added test for hedeby issue 547:
                               checktree_hedeby/checktree/issues/issue_547/check.62.exp
                             o new procedure get_resource_info_opt
                             o additional parameters for get_resource_info:
                               system_name and pref_type
                             o optional parameter delete_all now works for
                               mod_hedeby_resource
                 Cleanup:    o typoes and changed log level of some output from
                               fine to finer
                 Review:     MB, RH

TB-2008-10-17-0: Bugfix:    Fixed bug in test for hedeby issue 571:
                            int overflow in millisecond time calculation on
                            some machines
                 Review:    RH

JG-2008-10-17-0: Bugfix:    bugs/issuezilla/2459 failed on host without
                            SMF support 
                 Review:    MD

MD-2008-10-16-0: Enhancem:  added IZ 2753 issue test
                 Bugfix:    fixed IZ test 1823 and 2459
                 Review:    JG, CR

JF-2008-10-16-0: Enhancem.: Fixed changelog JF-2008-09-03-0

DG-2008-10-15-0: Enhancem.: Added test scenario to issue_1741. 
                 Review:    EB

TB-2008-10-15-0: Bugfix:    Fixed failing hedeby test for issue 551
                 Enhancem.: o same test: changed to use a ctx variable
                            o same test: improved to pick a random ge_adapter
                 Review:    RH

DG-2008-10-14-0: Bugfix:    Added complementary tests for issue_1741. 
                            Fix for del_queue function (didn't propagate 